[tool.poetry]
name = "xleaf"
version = "1.0.1"
description = "Leaf and canopy radiative transfer modeling tools built on PROSPECT-D and SAIL"
authors = ["Christopher Anderson <cbanders@alumni.stanford.edu>"]
license = "MIT"
readme = "README.md"
include = ["xleaf/*.so"]
keywords = ["prosail", "prospect", "radiative transfer modeling", "simulation modeling", "remote sensing"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.21.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
jupyter = "^1.0.0"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
twine = "^4.0.2"
mkdocs-material = "^9.5.2"
mkdocs-jupyter = "^0.24.6"
livereload = "^2.6.3"
mkdocstrings = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
